chore: Adicionado testes bru e unitario aos fluxos principais. E tudo testado